--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,17 @@
     "clsx": "^1.0.4",
     "dayjs": "^1.8.16",
     "exif-js": "^2.3.0",
+    "firebase": "^7.15.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.5.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
     "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.4",
+    "redux-firestore": "^0.13.0",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0"
   },
@@ -27,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "source-map-explorer": "^2.4.2"
   }
 }
