--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "pkmatchmaker",
+  "name": "meriwedding",
   "version": "1.0.0",
   "description": "Matrimonial site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db": "mongod",
+    "server": "nodemon --ignore client/",
+    "client": "cd ./client && npm run start",
+    "start": "concurrently --kill-others \"npm run db\" \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +17,12 @@
     "aws-sdk": "^2.553.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-cdn": "^0.4.0",
+    "fcm-node": "^1.5.2",
     "jimp": "^0.8.5",
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.27",
@@ -23,9 +31,15 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.23.1",
-    "striptags": "^3.1.1"
+    "spdy": "^4.0.1",
+    "striptags": "^3.1.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
+    "concurrently": "^5.0.0",
     "dotenv": "^8.1.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
